--- a/print/index.html
+++ b/print/index.html
@@ -10,6 +10,9 @@
     margin: 0;
     padding: 0;
   }
+  section div{
+    break-inside: avoid;
+  }
 
   section{
     width: 610pt;
@@ -24,37 +27,30 @@
   }
 </style>
 <style>
-  @media print {
-    @page {
-      margin: 0cm;
-      size: 33cm 29.7cm;
-      /*margin-right: 2.7cm;*/
-    }
+  @page {
+    margin: 0cm;
+    size: 33cm 22.7cm; /* 设置纵向的打印 */
+    margin-right: 2.7cm;
   }
-
-  /*@page :left {*/
-  /*margin-left: 4.5cm;*/
-  /*margin-right: 3.5cm;*/
-  /*}*/
 </style>
 <section>
 
-<div>1sdfasdf
+  <div>1sdfasdf
 
-</div>
-<div>2sdfasdf sdfsdf</div>
-<div>3sdfasdf sdfsdf</div>
-<div>4sdfasdf sdfsdf</div>
-<div>5sdfasdf sdfsdf</div>
-<div>6sdfasdf sdfsdf</div>
-<div>7sdfasdf sdfsdf</div>
-<div>8sdfasdf sdfsdf</div>
-<div>9sdfasdf sdfsdf</div>
-<div>10sdfasdf sdfsdf</div>
-<div>11sdfasdf sdfsdf</div>
-<div>12sdfasdf sdfsdf</div>
-<div>13sdfasdf sdfsdf</div>
-<div>14sdfasdf sdfsdf</div>
+  </div>
+  <div>2sdfasdf sdfsdf</div>
+  <div>3sdfasdf sdfsdf</div>
+  <div>4sdfasdf sdfsdf</div>
+  <div>5sdfasdf sdfsdf</div>
+  <div>6sdfasdf sdfsdf</div>
+  <div>7sdfasdf sdfsdf</div>
+  <div>8sdfasdf sdfsdf</div>
+  <div>9sdfasdf sdfsdf</div>
+  <div>10sdfasdf sdfsdf</div>
+  <div>11sdfasdf sdfsdf</div>
+  <div>12sdfasdf sdfsdf</div>
+  <div>13sdfasdf sdfsdf</div>
+  <div>14sdfasdf sdfsdf</div>
 </section>
 
 </body>
