--- a/print/printIframe.html
+++ b/print/printIframe.html
@@ -53,5 +53,6 @@
 <div>14sdfasdf sdfsdf</div>
 </section>
 
+<iframe width="400" height="400" src="./printIframe_frame.html"></iframe>
 </body>
 </html>
