--- a/print/printIframe_frame.html
+++ b/print/printIframe_frame.html
@@ -24,22 +24,15 @@
   }
 </style>
 <style>
-  @media print {
-    @page {
-      margin: 0cm;
-      size: 33cm 29.7cm;
-      /*margin-right: 2.7cm;*/
-    }
+  @page {
+    margin: 0cm;
+    size: 33cm 29.7cm;
+    /*margin-right: 2.7cm;*/
   }
-
-  /*@page :left {*/
-  /*margin-left: 4.5cm;*/
-  /*margin-right: 3.5cm;*/
-  /*}*/
 </style>
 <section>
 
-<div>1sdfasdf
+<div>这是iframe中的内容
 
 </div>
 </section>
