--- a/print/printIframe.html
+++ b/print/printIframe.html
@@ -32,7 +32,7 @@
 </style>
 <section>
   <div id="printbox">
-    1sdfasdf
+    只打印这一个元素
   </div>
   <div>2sdfasdf sdfsdf</div>
   <div>3sdfasdf sdfsdf</div>
